# db-sync-tool

./: .gitignore  Cargo.toml  Rocket.toml  package.json
src/: helpers.rs  main.rs  rocket_server.rs  static_server.rs  types.rs  ui.rs
src/db_conn/: mod.rs  mysql_conn.rs
src/helper/: arguments.rs  config_store.rs  dirs.rs  log.rs  misc.rs  mod.rs  resp.rs  resp_macros.rs
ui/: .env  package.json
ui/public/: index.html
ui/src/: App.tsx  Drawer.tsx  index.css  index.tsx  setupProxy.js  zz-style.scss
ui/src/api/: api-http-error.ts  app-db.ts  common.ts  configuration.ts  settings.ts
ui/src/constants/: default-configuration.ts
ui/src/contexts/: app-db.ts  context.ts  current-sync-config.tsx
ui/src/pages/project/: DbConfig.tsx  SyncConfigEditor.tsx  index.tsx
ui/src/theme/: index.ts
ui/src/types/: app-db.ts  configuration.ts  project.ts  sync-config.ts
ui/src/utils/: AsyncComponent.tsx  AsyncPage.tsx  ListPro.tsx  ResponsiveFrameView.tsx  ZzSelect.tsx  ZzTextArea.tsx  ZzTextField.tsx  client-addr-str-to-obj.ts  device.ts  dialog.ts  env.ts  errors.ts  id.ts  ts-typed-key.ts  use-async.ts  use-switch.ts
