[package]
name = "db-sync-tool"
version = "0.1.0"
authors = ["HerbLuo <cloudself.cn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] } # serialize
serde_json = "1.0"
futures = "0.3"
dirs = "3.0"
chrono = "0.4"
mysql = "20.1"
tray-item = "0.5.0-alpha"
webbrowser = "0.5"

[target."cfg(target_os=\"linux\")".dependencies.gtk]
version = ""
