[package]
name = "db-sync-tool"
version = "0.1.0"
authors = ["HerbLuo <cloudself.cn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] } # serialize
serde_json = "1.0"
futures = "0.3"
dirs = "3.0"
ctrlc = "3.1"
clap = "3.0.0-beta.2"
chrono = "0.4"
mysql = "20.1"
tray-item = "0.5.0-alpha"
webbrowser = "0.5"
lazy_static = "1.4"
tokio = "1.8"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
log = { version = "0.4", features= ["max_level_debug", "release_max_level_info"] }
log4rs = { version = "1.0",  features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }

[target."cfg(target_os=\"linux\")".dependencies.gtk]
version = "0.9"
